# ProyectoCovid19

./: .gitignore  CMakeLists.txt  Covid19Casos10.csv  README.md  main.cpp  provincias.txt
Headers/: ArbolBinario.h  DatosPaciente.h  DatosPacienteF.h  HashEntry.h  HashMap.h  Lista.h  NodoArbol.h  datosNecesarios.h  nodo.h  pila.h  provincias.h
cosas juan/: Covid19Casos10.csv  Covid19Casos1000.csv  main.cpp
cosas juan/Arbol/: NodoArbol.h
cosas juan/Archivos/: provincias.txt
